dessplay/src/ui/snapshots/dessplay__ui__components__series_pane_tests__the_list_snapshot_alphabetical.snap
---
source: dessplay/src/ui/components.rs
assertion_line: 2778
expression: render_list_pane(&mut p)
---
┌The List──────────────────────────────────────────────────┐
│▾ Watching — kim (2)                                      │
│  Akira                            movie?       K         │
│  Frieren                          S2E05     ✓  KN        │
│▾ Watching — nero (1)                                     │
│  Frieren                          S2E05     ✓  KN        │
│▾ Watching (1)                                            │
│  Adrift                                                  │
│▾ Planned (1)                                             │
│  Someday                                                 │
│▸ Finished / Dropped (1)                                  │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
