dessplay/src/ui/snapshots/dessplay__ui__components__series_pane_tests__the_list_snapshot_recency.snap
---
source: dessplay/src/ui/components.rs
expression: render_list_pane(&mut p)
---
┌The List──────────────────────────────────────────────────┐
│▾ Watching — kim (2)                                      │
│  Frieren 2                        S2E05     ✓  KN        │
│  Akira                            movie?       K         │
│▾ Watching — nero (1)                                     │
│  Frieren 2                        S2E05     ✓  KN        │
│▾ Watching (1)                                            │
│  Adrift                                                  │
│▾ Planned (1)                                             │
│  Someday                                                 │
│▸ Finished / Dropped (1)                                  │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
